--- a/css/sb-admin.css
+++ b/css/sb-admin.css
@@ -27,6 +27,11 @@ h3{
 #petimage {
   height: 200px;
   width: 200px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+#big-image{
+  height: 500px;
 }
 .content-wrapper {
   min-height: calc(100vh - 56px);
