--- a/css/sb-admin.css
+++ b/css/sb-admin.css
@@ -28,10 +28,11 @@ h3{
   height: 200px;
   width: 200px;
   margin-top: 30px;
-  margin-bottom: 30px;
 }
 #big-image{
   height: 500px;
+  display: block;
+  margin: 0 auto;
 }
 .content-wrapper {
   min-height: calc(100vh - 56px);
